--- a/frontend/src/app/components/Filter/Filter.css
+++ b/frontend/src/app/components/Filter/Filter.css
@@ -66,7 +66,7 @@
     font-size: min(1.5vh, 12px);
 }
 
-input[type="checkbox"] {
+/* input[type="checkbox"] {
     appearance: none;
     border: 0.2vh solid rgba(155, 82, 95, 1);
     border-radius: 0.3vh;
@@ -89,14 +89,14 @@ input[type="checkbox"]:checked {
 input[type="checkbox"]:checked::after {
     content: '';
     position: absolute;
-    left: 0.5vh;
-    top: 0.1vh;
+    left: 0.3vh;
+    top: 0.2vh;
     width: 0.7vh;
     height: 1.1vh;
     border: solid white;
     border-width: 0 0.3vh 0.3vh 0;
     transform: rotate(45deg);
-}
+} */
 
 .filter-section select {
     width: 100%;
