--- a/frontend/src/app/components/ReturnButton.css
+++ b/frontend/src/app/components/ReturnButton.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Akatab:wght@400;500;600;700;800;900&display=swap');
 
 /* container for all return items */
 .wrapper {
@@ -48,7 +47,7 @@
     color: black;
     font-family: "Akatab", serif;
     border-radius: 4.813px;
-    box-shadow: 0px 1.925px 4.813px 0px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0px 1.925px 4.813px 0px rgba(0, 0, 0, 0.25); */
     justify-content: space-evenly;
 }
 
@@ -267,7 +266,6 @@
 .condition {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
     width: 100%;
     margin-bottom: 0.5vh;
