--- a/frontend/src/app/components/SearchBar.css
+++ b/frontend/src/app/components/SearchBar.css
@@ -15,4 +15,5 @@
     background: linear-gradient(0deg, #FFF 0%, #FFF 100%), #F8F5F5;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
     color: black;
+    padding: 0.5rem;
 }
