--- a/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
+++ b/frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
@@ -37,6 +37,7 @@
     width: 1rem;
     height: 1rem;
     padding: 5px;
+    margin: 10px;
     align-items: center;
     gap: 10px;
     flex-shrink: 0;
@@ -50,12 +51,14 @@
 
 /* Checkbox checked style */
 .checkbox-input:checked {
-    border-color: 0.804px solid #915360;
+    border-color: #915360;
     background-color: #803946;
     box-shadow: 0px 0.402px 1.608px 0px rgba(0, 0, 0, 0.25);
+    position: relative;
 }
 
 .checkbox-input:checked::after {
+    position: absolute;
     content: "";
     width: 5px;
     height: 9px;
