Adding escape shortcut to close popup

--- a/frontend/src/app/components/DeletePopup.css
+++ b/frontend/src/app/components/DeletePopup.css
@@ -87,12 +87,47 @@
     gap: 1rem;
 }
 
+/* display: inline-flex;
+padding: 11px 20px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+border-radius: 5px;
+border: 1px solid #9B525F;
+background: #FFF;
+box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+color: #000;
+text-align: center;
+font-family: Akatab;
+font-size: 1rem;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+flex-shrink: 1;
+
+height: 5vh; */
+
 .confirmCancel {
     border-radius: 5px;
     border: 1px solid #9B525F;
     background: #FFF;
     color: black;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+    display: inline-flex;
+    padding: 11px 20px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    text-align: center;
+    font-family: Akatab;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    flex-shrink: 1;
+
+    height: 5vh;
+    cursor: pointer;
 }
 
 .confirmDelete {
@@ -101,6 +136,21 @@
     background: #C90024;
     color: #FFF;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+    display: inline-flex;
+    padding: 11px 20px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    text-align: center;
+    font-family: Akatab;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    flex-shrink: 1;
+
+    height: 5vh;
+    cursor: pointer;
 }
 
 .importantIcon {
