--- a/frontend/src/app/components/BorrowPopup.css
+++ b/frontend/src/app/components/BorrowPopup.css
@@ -1,6 +1,7 @@
 /* BorrowPopup.css
 //
 // Edited by Peter Morganelli, 2/16/25
+// Last edited by Dan Glorioso & Hannah Jiang, 3/29/25
 //
 // Purpose: 
 //     This file contains all the styling for the BorrowPopup and 
@@ -27,10 +28,6 @@
 }
 
 .borrowItemsHeader {
-    /* flex: 0 0 45%;
-    display: flex;
-    flex-direction: column;
-    padding: 2rem; */
     color: #000;
     width: 100%;
   }
@@ -62,7 +59,6 @@
     background-color: #ffe5e5;
     border: 1px solid #9b525f;
     border-radius: 4px;
-    /* padding: 0.75rem 1rem; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -131,7 +127,6 @@
   .form-row {
     display: flex;
     gap: 1rem;
-    /* align-items: center; */
   }
   
   .form-row.full-width {
@@ -162,7 +157,6 @@
     border: 1px solid #9b525f;
     border-radius: 4px;
     font-size: 1rem;
-    /* font-family: Arial, sans-serif; */
     font-weight: 400;
     box-sizing: border-box;
     width: 100%;
