--- a/frontend/src/app/components/AddPage.css
+++ b/frontend/src/app/components/AddPage.css
@@ -157,7 +157,7 @@
 .inputGroup {
     display: flex;
     flex-direction: column;
-    flex: 1; /* Ensure equal width for both fields */
+    flex: 1;
 }
 
 .textLabel {
@@ -170,7 +170,7 @@
 .itemTextBox,
 .locationTextBox {
     width: 100%;
-    height: 5vh; /* Adjusted height for a compact look */
+    height: 5vh;
     padding: 0.3rem;
     border-radius: 0.2rem;
     resize: none;
@@ -184,7 +184,6 @@
     padding: .35rem;
     outline: none;
 }
-
 
 .itemTextBox textarea,
 .locationTextBox textarea {
@@ -201,7 +200,6 @@
     outline: none;
     line-height: 4vh;
 }
-
 
 .idName {
     color: #000;
