--- a/frontend/src/app/components/Dropdown.css
+++ b/frontend/src/app/components/Dropdown.css
@@ -19,7 +19,7 @@
     border-radius: 5px;
     padding: 0;
     margin: 0;
-    border-color: 1px solid rgba(155, 82, 95, 1); /* Updated border color */
+    border-color: 1px solid rgba(155, 82, 95, 1);
 }
 
 /* Style the arrow inside the select element: */
@@ -31,11 +31,11 @@
     width: 0;
     height: 0;
     border: 3% solid transparent;
-    border-color: (155, 82, 95, 1);  /* Updated border color */
+    border-color: (155, 82, 95, 1);
 }
 
 /* Point the arrow upwards when the select box is open (active): */
 .select-selected.select-arrow-active:after {
-    border-color: transparent transparent rgba(155, 82, 95, 1) transparent; /* Updated border color */
+    border-color: transparent transparent rgba(155, 82, 95, 1) transparent;
     top: 7%;
 }
