--- a/frontend/src/app/components/SettingsPage.css
+++ b/frontend/src/app/components/SettingsPage.css
@@ -35,9 +35,15 @@ h1 {
 }
 
 .subheading {
-    font-size: 14px;
-    color: #666;
+    color: #000;
+
+    font-family: Akatab;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
     margin-bottom: 20px;
+    margin-right: 13.5rem;
 }
 
 .profile-card, .options-card {
@@ -45,7 +51,7 @@ h1 {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-    width: 350px;
+    width: 500px;
     margin-bottom: 15px;
     box-shadow: 0px .1rem .2rem 0px rgba(0, 0, 0, 0.25);
 
@@ -111,8 +117,6 @@ input:disabled {
     display: flex;
     align-items: left;  /* Keep label and switch aligned */
     justify-content: space-between; /* Ensures label and switch stay on the same row */
-    gap: 5px; /* Reduce spacing between label and toggle */
-    width: 50%;
     margin: 5px 0; /* Keep rows close together */
     
 }
@@ -122,7 +126,6 @@ input:disabled {
 .toggle-label {
     flex: 1; /* Allows label to take up equal space */
     font-size: 14px;
-    margin-right: 10px; /* Adds slight spacing from the switch */
 }
 
 
@@ -136,6 +139,7 @@ input:disabled {
     width: 120px;
     height: 30px;
     box-shadow: 0px .1rem .2rem 0px rgba(0, 0, 0, 0.25);
+    margin-right: 1rem;
 
 }
 
@@ -144,7 +148,7 @@ input:disabled {
     text-decoration: none;
     margin-top: 10px;
     font-size: 14px;
-    
+    margin-right: 2.8rem;
 }
 
 .adminapprovals {
@@ -239,6 +243,7 @@ input:disabled {
     display: inline-block;
     width: 40px;
     height: 20px;
+    margin-left: 2rem;
     
 }
 
@@ -306,12 +311,12 @@ input:checked + .slider:before {
 
 /* Selects ONLY the second .toggle div and applies margin to its label */
 .toggle:nth-of-type(2) label {
-    margin-right: 8rem; /* Adjust as needed */
+    margin-right: 12.2rem; /* Adjust as needed */
 }
 
 /* Selects ONLY the second .toggle div and applies margin to its label */
 .toggle:nth-of-type(1) label {
-    margin-right: 1rem; /* Adjust as needed */
+    margin-right: 7rem; /* Adjust as needed */
 }
 
 /* Targets ONLY the second .toggle div and applies styles to its switch */
@@ -331,10 +336,24 @@ input:checked + .slider:before {
 }
 
 /* Ensure the switch stays properly aligned */
-.switch {
-    margin-right: auto; /* Pushes switch as far right as possible */
+
+
+.normal-data-entry {
+    color: #000;
+    font-family: Akatab;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1rem;
 }
 
-
+.light-mode {
+    color: #000;
+    font-family: Akatab;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1rem;
+}
 
 
