--- a/frontend/src/app/inventory/inventory.css
+++ b/frontend/src/app/inventory/inventory.css
@@ -10,7 +10,9 @@ body, html {
     /* margin: auto; */
     background: #F8F5F5;
     height: 95vh; /* Increase height to give more space */
-    width: 95vw;
+    width: calc(100% - 80px);
+    max-width: 100%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
