--- a/frontend/src/app/components/BorrowPopup.css
+++ b/frontend/src/app/components/BorrowPopup.css
@@ -492,19 +492,48 @@
   
   .alert-container {
     position: fixed;
-    top: 20%;
+    top: 40%;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1000;
     background-color: rgba(0,0,0,0.4);
-    padding: 1rem;
+    /* padding: 1rem; */
     border-radius: 8px;
   }
   
   .alert-box {
     background: white;
-    padding: 1rem 1.5rem;
+    padding: 2.5rem 3rem;
     border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    box-shadow: 0 0 35px 10px rgba(0,0,0,0.2);
+    align-items: center;
+  }
+
+  .alert-box p {
+    font-family: Akatab;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 1.5vh;
+  }
+
+  .alert-box h2 {
+      font-size: 1.75rem;
+    margin-bottom: 2vh;
+
+    color: #000;
+    text-align: center;
+    font-family: Akatab;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
   }
   
+  .alert-row {
+    display: flex;
+    gap: 1rem;
+    align-items: right;
+    justify-content: right;
+  }
