--- a/frontend/src/app/components/ReturnButton.css
+++ b/frontend/src/app/components/ReturnButton.css
@@ -305,3 +305,126 @@
     display: block;
     padding-bottom: 100%;
   }
+
+
+  .alert-container {
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+    background-color: rgba(0,0,0,0.4);
+    /* padding: 1rem; */
+    border-radius: 8px;
+  }
+  
+  .alert-box {
+    background: white;
+    padding: 2.5rem 3rem;
+    border-radius: 8px;
+    box-shadow: 0 0 35px 10px rgba(0,0,0,0.2);
+    align-items: center;
+  }
+
+  .alert-box p {
+    font-family: Akatab;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 1.5vh;
+  }
+
+  .alert-box h2 {
+      font-size: 1.75rem;
+    margin-bottom: 2vh;
+
+    color: #000;
+    text-align: center;
+    font-family: Akatab;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+  
+  .alert-row {
+    display: flex;
+    gap: 1rem;
+    align-items: right;
+    justify-content: right;
+  }
+
+
+  .success-popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .success-popup {
+    background-color: #fff;
+    padding: 2rem;
+    border-radius: 12px;
+    max-width: 500px;
+    width: 90%;
+    text-align: center;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+    font-family: Arial, sans-serif;
+  }
+  
+  .success-popup h2 {
+    font-size: 1.75rem;
+    margin-bottom: 1rem;
+
+    color: #000;
+    text-align: center;
+    font-family: Akatab;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  .success-popup p {
+    font-family: Akatab;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-align: center;
+
+  }
+  
+  .success-popup button {
+    margin-top: 2rem;
+    padding: 0.625rem 1.5rem;
+
+    cursor: pointer;
+
+    border-radius: 5px;
+    border: 1px solid #9B525F;
+    background: #FFF;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+
+
+    color: #000;
+    text-align: center;
+    font-family: Akatab;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    transition: 0.3s;
+  }
+
+  .success-popup button:hover {
+    background-color: #9B525F; 
+    color: #FFFFFF;
+  }
