--- a/frontend/src/app/components/SearchBar.css
+++ b/frontend/src/app/components/SearchBar.css
@@ -5,6 +5,7 @@
     justify-content: space-between;
     align-items: center;
     border-radius: 5px;
+    padding-left: 2rem;
 }
 
 .Searchbar input[type="text"] {
