--- a/frontend/src/app/inventory/inventory.css
+++ b/frontend/src/app/inventory/inventory.css
@@ -1,16 +1,21 @@
+:root {
+    --sm_font: 'Akatab';
+}
+
 body, html {
     height: 100%;
     margin: 0;
     display: flex;
     align-items: center; 
     justify-content: center; 
+    font-family: var(--sm_font);
 }
 
 .Table {
     /* margin: auto; */
     background: #F8F5F5;
     height: 95vh; /* Increase height to give more space */
-    width: 95vw;
+    width: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
