--- a/frontend/src/app/components/ExportDataBtn.css
+++ b/frontend/src/app/components/ExportDataBtn.css
@@ -9,7 +9,7 @@
  * 
  **************************************************************/
 .export-btn {
-    background: #804a4a;
+    background: rgba(155, 82, 95, 1);
     color: white;
     border: none;
     border-radius: 5px;
@@ -18,5 +18,4 @@
     width: 120px;
     height: 30px;
     box-shadow: 0px .1rem .2rem 0px rgba(0, 0, 0, 0.25);
-
 }
