--- a/frontend/src/app/inventory/inventory.css
+++ b/frontend/src/app/inventory/inventory.css
@@ -32,6 +32,7 @@ body, html {
 .Items {
     display: flex;
     align-items: center;
+    flex-direction: row;
     justify-content: space-between;
     width: 100%;
     padding: 1px;
