--- a/frontend/src/app/borrowers/BorrowerExpanded.css
+++ b/frontend/src/app/borrowers/BorrowerExpanded.css
@@ -51,11 +51,12 @@
   width: 33vw;
   height: 100vh;
   flex-direction: column;
-  gap: 5rem;
   text-align: left;
   min-width: 450px;
   padding: 1rem 1.5rem;
   overflow-wrap: break-word;
+  display: flex;
+  flex-direction: column;
   /* animation: slideIn 0.3s ease-out forwards; */
 
 }
@@ -68,7 +69,11 @@
     transform: translateX(0);
   }
 } */
-
+.name-and-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
 .close-btn {
   background: none;
