--- a/frontend/src/app/components/AddPage.css
+++ b/frontend/src/app/components/AddPage.css
@@ -9,16 +9,16 @@
  * 
  **************************************************************/
 
-.add-page {
+ .add-page {
     width: 100vw;
     height: 100vh;
     margin: 0;
-    padding: 0;
 }
 
 .main {
     width: 100vw;
     height: 100vh;
+
 }
 
 .column {
@@ -40,6 +40,8 @@
 .left {
     display: flex;
     padding-top: 2rem;
+    padding-left: 1.5vw;
+
     flex-direction: column;
     width: 40%;
     margin-left: 2rem;
@@ -85,7 +87,7 @@
 }
 
 #drop-zone {
-    width: 38vw;
+    width: 36.5vw;
     height: 30vh;
     border: 1px solid var(--sm_red);
     border-radius: 1px;
@@ -368,9 +370,9 @@
 
 .textBoxRow {
     display: flex;
-    gap: 1.8rem;
+    gap: 1.3rem;
     justify-content: center;
-    width: 100%;
+    width: auto;
     margin-top: 1rem;
 }
 
@@ -416,6 +418,25 @@
     outline: none;
     line-height: 3.5vh;
 }
+
+/* .idTextBox textarea,
+.dateTextBox textarea,
+.priceInput input {
+    padding-left: 1rem;      
+    padding-right: 0.5rem;     
+    padding-top: 0.35rem;
+    padding-bottom: 0.35rem;
+
+    font-size: 1rem;
+    border-radius: 0.2rem;
+    border: 1px solid #585555;
+    box-shadow: 0px .1rem .2rem rgba(0, 0, 0, 0.25);
+    outline: none;
+    resize: none;
+    line-height: 3.5vh;
+    overflow: hidden;
+} */
+
 
 .notesName {
     color: #000;
