--- a/frontend/src/app/components/AddPage.css
+++ b/frontend/src/app/components/AddPage.css
@@ -9,7 +9,7 @@
  * 
  **************************************************************/
 
- .add-page {
+.add-page {
     width: 100vw;
     height: 100vh;
     margin: 0;
@@ -17,7 +17,7 @@
 }
 
 .main {
-    width: 100vw;
+    width: 90vw;
     height: 100vh;
 }
 
@@ -27,6 +27,7 @@
     left: 0rem;
     position: absolute;
     padding-left: 4.5vw;
+    margin-left: 1vw;
 }
 
 .title {
@@ -618,3 +619,41 @@
 .statusMessage.error {
     color: #dc3545;
 }
+
+.image-preview-container {
+    position: relative;
+    display: inline-block;
+    margin: 0.5rem;
+  }
+  
+  .preview {
+    display: block;
+    max-width: 100%;
+    border-radius: 6px;
+  }
+  
+  .remove-image-btn {
+    position: absolute;
+    top: 10px;
+    right: 0;
+    transform: translate(50%, -50%);
+    background-color: #fff;
+    color: #7B3F4C;
+    border: 2px solid #7B3F4C;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 20px;
+    text-align: center;
+    cursor: pointer;
+    z-index: 10;
+    padding: 0;
+  }
+  
+  .remove-image-btn:hover {
+    background-color: #7B3F4C;
+    color: #fff;
+  }
+  
