--- a/frontend/src/app/components/EditPage.css
+++ b/frontend/src/app/components/EditPage.css
@@ -40,6 +40,8 @@
 .left {
     display: flex;
     padding-top: 2rem;
+    padding-left: 1.5vw;
+
     flex-direction: column;
     width: 40%;
     margin-left: 2rem;
@@ -346,7 +348,7 @@
 
 .textBoxRow {
     display: flex;
-    gap: 1.8rem;
+    gap: 1.3rem;
     justify-content: center;
     margin-top: 1rem;
 }
