--- a/frontend/src/app/components/StylishButton.css
+++ b/frontend/src/app/components/StylishButton.css
@@ -146,7 +146,10 @@
     font-weight: 400;
     line-height: normal;
     flex-shrink: 1;
-
     height: 5vh;
     width: 3vw;
+  }
+
+  .stylish-button.style7:hover {
+    background-color: #e7e7e7;
   }
