--- a/frontend/src/app/inventory/15Tablecomp/Popup.css
+++ b/frontend/src/app/inventory/15Tablecomp/Popup.css
@@ -116,11 +116,12 @@
   display: flex;
 }
 
-.buttons {
+.buttonsP {
   display: flex;
   flex-shrink: 0;
   margin-left: auto;
   margin-right: 20px;
+  gap: 10px;
 }
 
 .imageContainer {
